ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: horoscope-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /horoscope/.*
        backend:
          serviceName: horoscope
          servicePort: 8080
